--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -17,12 +17,45 @@
             android:weightSum="1"
             android:background="#ffffff">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:id="@+id/imageView3"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="90dp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/beer1"
+                    android:layout_marginTop="90dp" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/beer1"
+                    android:layout_marginTop="90dp" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/beer1"
+                    android:layout_marginTop="90dp" />
+
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/beer1"
+                    android:layout_marginTop="90dp" />
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/beer1"
+                    android:id="@+id/imageView3"
+                    android:layout_marginTop="90dp" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/textView11"
@@ -32,7 +65,6 @@
                 android:textColor="@color/text"
                 android:textSize="@dimen/h2"
                 android:textStyle="bold"
-
                 android:shadowColor="#333333"
                 android:shadowDx="3"
                 android:shadowDy="2"
@@ -59,18 +91,11 @@
 
             <fragment
                 android:id="@+id/map"
-
-
                 android:name="com.google.android.gms.maps.SupportMapFragment"
-
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-
                 tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
                 android:layout_marginTop="10dp" />
-
-
-            />
 
             <RatingBar
                 android:id="@+id/ratingBar"
@@ -150,10 +175,12 @@
             android:shadowRadius="1" />
     </LinearLayout>
 
+
+
     <LinearLayout
         android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="#80caa6"
         android:gravity="center_horizontal"
