--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/imageView2"
         android:layout_margin="10dp"
         android:src="@drawable/dd" />
 
     <TextView
+        android:id="@+id/txttest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/txttest"
         android:layout_gravity="center_vertical"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
         android:shadowColor="#333333"
         android:shadowDx="3"
         android:shadowDy="2"
         android:shadowRadius="1"
-        />
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
