--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -27,6 +27,22 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp" />
 
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="120dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imagez" />
+
+                    <ImageView
+                        android:layout_width="120dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imagezz" />
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/textView42"
                     android:layout_width="fill_parent"
@@ -60,8 +76,7 @@
                     android:id="@+id/fragment"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="10dp" />
+                    android:layout_height="200dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -158,31 +173,6 @@
                         android:layout_marginTop="10dp"
                         android:textSize="20sp"
                         android:layout_marginLeft="10dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp">
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/imageView15"
-                        android:src="@drawable/zatravel"
-                        />
-
-                    <TextView
-                        android:id="@+id/travel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="New Text"
-                        android:textColor="#000000"
-                        android:layout_marginTop="10dp"
-                        android:textSize="20sp"
-                        android:layout_marginLeft="10dp"/>
 
                 </LinearLayout>
 
