--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -27,6 +27,22 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="90dp" />
 
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="120dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView57" />
+
+                    <ImageView
+                        android:layout_width="120dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView58" />
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/Description"
                     android:layout_width="fill_parent"
