--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -23,39 +23,30 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="130dp"
-                    android:src="@drawable/beer1"
-                    android:layout_marginTop="90dp" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="130dp"
-                    android:src="@drawable/beer1"
-                    android:layout_marginTop="90dp" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="130dp"
-                    android:src="@drawable/beer1"
-                    android:layout_marginTop="90dp" />
-
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="130dp"
-                    android:src="@drawable/beer1"
-                    android:layout_marginTop="90dp" />
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="130dp"
-                    android:src="@drawable/beer1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp"
                     android:id="@+id/imageView3"
                     android:layout_marginTop="90dp" />
 
+
             </LinearLayout>
 
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/imageView6" />
+
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/imageView15" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView11"
@@ -102,6 +93,121 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_horizontal" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp" >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/imageView21"
+                    android:src="@drawable/zaadd" />
+
+                <TextView
+                    android:id="@+id/addtour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textColor="#000000"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp" >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/imageView51"
+                    android:src="@drawable/zacall" />
+
+                <TextView
+                    android:id="@+id/calltour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp" >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/imageView52"
+                    android:src="@drawable/zaopen" />
+
+                <TextView
+                    android:id="@+id/oprntour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp" >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/imageView53"
+                    android:src="@drawable/zaemail" />
+
+                <TextView
+                    android:id="@+id/emailtour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:textColor="#000000"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp" >
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/imageView54"
+                    android:src="@drawable/zaprice" />
+
+                <TextView
+                    android:id="@+id/pricetour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textColor="#000000"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -176,7 +282,6 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
@@ -185,7 +290,7 @@
         android:background="#80caa6"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:layout_marginTop="48dp">
+        android:layout_marginTop="47dp">
 
         <TextView
             android:id="@+id/textView10"
@@ -202,6 +307,46 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="#ff7190"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_marginTop="91dp">
+
+        <TextView
+            android:id="@+id/tumbon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h2"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp" />
+
+        <TextView
+            android:id="@+id/moban"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h2"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp" />
     </LinearLayout>
 
 </RelativeLayout>
