--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -21,25 +21,26 @@
                 android:background="#ffffff" >
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="160dp"
                     android:id="@+id/imageView10"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="50dp" />
+                    android:layout_marginTop="49dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp">
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imagez" />
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imagezz" />
                 </LinearLayout>
 
