--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -102,28 +102,7 @@
                         android:layout_marginTop="10dp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp" >
 
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/imageView23"
-                        android:src="@drawable/zaemail" />
-
-                    <TextView
-                        android:id="@+id/email2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="New Text"
-                        android:layout_marginLeft="10dp"
-                        android:textSize="20sp"
-                        android:textColor="#000000"
-                        android:layout_marginTop="10dp" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -139,6 +118,29 @@
 
                     <TextView
                         android:id="@+id/price3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView29"
+                        android:src="@drawable/zaadd" />
+
+                    <TextView
+                        android:id="@+id/addd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
