--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -22,7 +22,7 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="160dp"
                     android:id="@+id/imageView8"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="90dp" />
@@ -33,13 +33,13 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imageView57" />
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imageView58" />
                 </LinearLayout>
 
@@ -147,30 +147,6 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:textSize="20dp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp">
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/imageView29"
-                        android:src="@drawable/zatravel" />
-
-                    <TextView
-                        android:id="@+id/traval"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="traval3"
-                        android:textColor="#000000"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="20dp"/>
-
                 </LinearLayout>
 
                 <LinearLayout
