--- a/app/src/main/res/layout/activity_seasonraindis.xml
+++ b/app/src/main/res/layout/activity_seasonraindis.xml
@@ -21,8 +21,8 @@
                 android:background="#ffffff" >
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="160dp"
                     android:id="@+id/imageView8"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="90dp" />
@@ -30,16 +30,17 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp">
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imageView55" />
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/imageView56" />
                 </LinearLayout>
 
