--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -24,9 +24,9 @@
 
                 <ImageView
                     android:layout_width="fill_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="160dp"
                     android:id="@+id/imageView3"
-                    android:layout_marginTop="135dp" />
+                    android:layout_marginTop="125dp" />
 
 
             </LinearLayout>
@@ -35,17 +35,19 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:id="@+id/imageView6" />
 
                 <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/imageView15" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView15"
+                    android:layout_marginLeft="5dp" />
             </LinearLayout>
 
             <TextView
