--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -323,6 +323,19 @@
         android:layout_marginTop="91dp">
 
         <TextView
+            android:id="@+id/textView29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h2"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_gravity="center_vertical"
+            android:text="ตำบล" />
+
+        <TextView
             android:id="@+id/Tumbon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -332,7 +345,21 @@
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp" />
+
+        <TextView
+            android:id="@+id/textView32"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h2"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_gravity="center_vertical"
+            android:text="หมู่บ้าน" />
 
         <TextView
             android:id="@+id/Moban"
@@ -344,7 +371,8 @@
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
 </RelativeLayout>
