--- a/app/src/main/res/layout/activity_seasonsummer.xml
+++ b/app/src/main/res/layout/activity_seasonsummer.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/beerza"
+    android:orientation="vertical"
+    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.TourActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout27"
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
         android:background="#9d00ff"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView31"
+            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
@@ -22,135 +26,16 @@
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:text="SUMMER"
+            android:text="New Text"
             android:textColor="@color/text"
             android:textSize="@dimen/h1" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <ListView
+        android:id="@+id/listView3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
+        android:layout_height="match_parent"
+        android:layout_margin="20dp" />
 
-        <ImageView
-            android:layout_width="195dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView36"
-            android:src="@drawable/zamaiton" />
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView37"
-            android:src="@drawable/zalaywak" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <Button
-            android:layout_width="195dp"
-            android:layout_height="wrap_content"
-            android:text="เกาะไม้ท่อน"
-            android:id="@+id/button13"
-            android:background="@drawable/button_shape10"
-            android:textColor="#ffffff" />
-
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="ทะเลแหวก"
-            android:id="@+id/button14"
-            android:textColor="#ffffff"
-            android:background="@drawable/button_shape11" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
-
-        <ImageView
-            android:layout_width="195dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView40"
-            android:src="@drawable/zalepai" />
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView41"
-            android:src="@drawable/zatachai" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <Button
-            android:layout_width="195dp"
-            android:layout_height="wrap_content"
-            android:text="เกาะหลีเป๊ะ"
-            android:id="@+id/button17"
-            android:textColor="#ffffff"
-            android:background="@drawable/button_shape11" />
-
-        <Button
-            android:layout_width="195dp"
-            android:layout_height="wrap_content"
-            android:text="เกาะตาชัย"
-            android:id="@+id/button20"
-            android:background="@drawable/button_shape10"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
-
-        <ImageView
-            android:layout_width="195dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView38"
-            android:src="@drawable/zasimiran" />
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView39"
-            android:src="@drawable/zatalutao" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <Button
-            android:layout_width="195dp"
-            android:layout_height="wrap_content"
-            android:text="หมู่เกาะสิมิลัน"
-            android:id="@+id/button37"
-            android:background="@drawable/button_shape10"
-            android:textColor="#ffffff" />
-
-        <Button
-            android:layout_width="195dp"
-            android:layout_height="wrap_content"
-            android:text="อุทยานแห่งชาติตะรุเตา"
-            android:id="@+id/button38"
-            android:textColor="#ffffff"
-            android:background="@drawable/button_shape11" />
-    </LinearLayout>
 
 </LinearLayout>
