--- a/app/src/main/res/drawable/button_shape2.xml
+++ b/app/src/main/res/drawable/button_shape2.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#dc8203"/>
+        android:color="#ff8000"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#dc8203"
-        android:endColor="#dc8203"
+        android:startColor="#ff8000"
+        android:endColor="#ff8000"
         android:type="linear"
         android:angle="270"/>
 </shape>
