--- a/app/src/main/res/drawable/button_shape4.xml
+++ b/app/src/main/res/drawable/button_shape4.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#48d52f"/>
+        android:color="#1bb300"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#48d52f"
-        android:endColor="#48d52f"
+        android:startColor="#1bb300"
+        android:endColor="#1bb300"
         android:type="linear"
         android:angle="270"/>
 </shape>
