--- a/app/src/main/res/drawable/button_shape6.xml
+++ b/app/src/main/res/drawable/button_shape6.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#f496d6"/>
+        android:color="#ff00bb"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#f496d6"
-        android:endColor="#f496d6"
+        android:startColor="#ff00bb"
+        android:endColor="#ff00bb"
         android:type="linear"
         android:angle="270"/>
 </shape>
