--- a/app/src/main/res/drawable/button_shape7.xml
+++ b/app/src/main/res/drawable/button_shape7.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#e1c804"/>
+        android:color="#e76400"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#e1c804"
-        android:endColor="#e1c804"
+        android:startColor="#e76400"
+        android:endColor="#e76400"
         android:type="linear"
         android:angle="270"/>
 </shape>
