--- a/app/src/main/res/layout/activity_manu.xml
+++ b/app/src/main/res/layout/activity_manu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/beerza">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView24"
@@ -17,7 +16,7 @@
         android:shadowDy="2"
         android:shadowRadius="1"
         android:paddingLeft="30dp"
-        android:background="#059de4" />
+        android:background="#0c05e4" />
 
     <LinearLayout
         android:id="@+id/linearLayout14"
@@ -29,16 +28,17 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="100dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp">
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="80dp"
             android:text="NEW"
             android:id="@+id/button8"
-            android:background="@drawable/button_shape1" />
+            android:background="@drawable/button_shape1"
+            android:textSize="20dp"
+            android:textColor="#ffffff" />
 
         <Button
             android:layout_width="fill_parent"
@@ -46,7 +46,9 @@
             android:text="สถานที่ท่องเที่ยวที่น่าสนใจ"
             android:id="@+id/button9"
             android:background="@drawable/button_shape6"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:textColor="#ffffff"/>
 
         <Button
             android:layout_width="fill_parent"
@@ -54,7 +56,9 @@
             android:text="สถานที่ท่องเที่ยวตามฤดูกาล"
             android:id="@+id/button10"
             android:background="@drawable/button_shape4"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:textColor="#ffffff"/>
 
         <Button
             android:layout_width="fill_parent"
@@ -62,7 +66,9 @@
             android:text="ข่าวสารการท่องเที่ยว"
             android:id="@+id/button11"
             android:layout_marginTop="10dp"
-            android:background="@drawable/button_shape7" />
+            android:background="@drawable/button_shape7"
+            android:textSize="20dp"
+            android:textColor="#ffffff"/>
     </LinearLayout>
 
 </LinearLayout>
