--- a/app/src/main/res/layout/activity_pic_big.xml
+++ b/app/src/main/res/layout/activity_pic_big.xml
@@ -14,7 +14,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:background="#ff0000">
 
 
             <ImageView
