--- a/app/src/main/res/layout/activity_reporttitel.xml
+++ b/app/src/main/res/layout/activity_reporttitel.xml
@@ -111,7 +111,7 @@
             android:layout_marginTop="48dp" >
 
             <TextView
-                android:id="@+id/report"
+                android:id="@+id/reporttitell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Report"
