--- a/app/src/main/res/layout/activity_season.xml
+++ b/app/src/main/res/layout/activity_season.xml
@@ -33,7 +33,7 @@
         android:layout_height="140dp"
         android:id="@+id/imageView9"
         android:background="@drawable/visasum"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="40dp" />
 
     <Button
         android:layout_width="match_parent"
@@ -41,7 +41,8 @@
         android:text="SUMMER"
         android:id="@+id/button35"
         android:background="@drawable/button_shape2"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textColor="#FFFFFF"/>
 
     <ImageView
         android:layout_width="match_parent"
@@ -56,6 +57,7 @@
         android:text="RAINY"
         android:id="@+id/button36"
         android:background="@drawable/button_shape1"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textColor="#FFFFFF"/>
 
 </LinearLayout>
